# RunningGun

./: CMakeLists.txt  README.md  RunningGun.vcxproj
config/: controls.json  prefabs.json
include/: BullComponent.h  BullStates.h  Component.h  DustComponent.h  PatrolAIComponent.h  PhysicsComponent.h  PlayerActions.h  PlayerComponent.h  PlayerStates.h  ProjectileComponent.h  utility.h
include/animation/: AnimationClip.h  AnimationController.h
include/app/: RunningGunApp.h
include/collision/: QuadTree.h
include/core/: Animation.h  AnimationListener.h  BasePlayerAction.h  Camera.h  Component.h  ComponentRegistry.h  Entity.h  Environment.h  Game.h  GameContext.h  GameMode.h  InputManager.h  JsonParser.h  JsonUtils.h  JsonValue.h  Locator.h  MathUtils.h  ObjectPool.h  Physics.h  PrefabComponentRegistry.h  PrefabFactory.h  PrefabLibrary.h  PrefabLoader.h  PrefabSystem.h  Prefabs.h  PropertyDescriptor.h  QuadTree.h  Rect.h  ResourceHandler.h  Sprite.h  State.h  Timer.h  UIElement.h  UIHealthBar.h  UIText.h  Vec2.h  World.h  cResourceHandler.inl  sEnvironment.h  sLocator.h  (+2 more)
include/core/UI/: UIElement.h  UIManager.h
include/core/animation/: Animation.h  AnimationListener.h
include/core/base/: Actor.h  ActorComponent.h  ComponentMacros.h  State.h
include/core/collision/: QuadTreeProxy.h
include/core/components/: AnimatorComponent.h  RigidBody2DComponent.h  SpriteComponent.h  TransformComponent.h
include/core/containers/: BatchArray.h
include/core/engine/: Engine.h  EngineServices.h  FrameClock.h  Game.h  GameContext.h  GameServiceHost.h  GameplayServices.h  IService.h  (+13 more)
include/game/: RunningGunGameMode.h
src/: BullComponent.cpp  BullStates.cpp  DustComponent.cpp  Locator.cpp  PatrolAIComponent.cpp  Physics.cpp  PhysicsComponent.cpp  PlayerActions.cpp  PlayerComponent.cpp  PlayerStates.cpp  Prefabs.cpp  ProjectileComponent.cpp  sLocator.cpp  sPhysics.cpp  sPrefabs.cpp
src/animation/: AnimationController.cpp
src/app/: RunningGunApp.cpp  main.cpp
src/collision/: QuadTree.cpp
src/core/: Animation.cpp  AnimationListener.cpp  Camera.cpp  Component.cpp  ComponentRegistry.cpp  Entity.cpp  Environment.cpp  Game.cpp  GameContext.cpp  InputManager.cpp  JsonParser.cpp  JsonUtils.cpp  JsonValue.cpp  ObjectPool.cpp  PrefabComponentRegistry.cpp  PrefabFactory.cpp  PrefabLibrary.cpp  PrefabLoader.cpp  PrefabSystem.cpp  QuadTree.cpp  ResourceHandler.cpp  RunningGunGameMode.cpp  Sprite.cpp  State.cpp  Timer.cpp  UIHealthBar.cpp  UIText.cpp  World.cpp  main.cpp  sEnvironment.cpp
src/game/: BullStates.cpp  Prefabs.cpp  RunningGunGameMode.cpp
tests/: CMakeLists.txt
tests/core/: ActorHierarchyTests.cpp  AnimationTests.cpp  CollisionProxyTests.cpp  ComponentTests.cpp  MulticastDelegateTests.cpp  RectTests.cpp  RenderTypesTests.cpp  TextureServiceTests.cpp  TimerTests.cpp  Vec2Tests.cpp
(+168 files in other folders)
